<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableRow
            android:minHeight="@dimen/space_100"
            android:layout_width="match_parent"
            >
            <TextView
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/this_is_a_purple_text_view"
                android:background="#aa6f73"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/beige_text_view"
                android:background="#f6e0b5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/this_is_an_orange_text_view"
                android:background="#eea990"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:minHeight="@dimen/space_100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:layout_margin="4dp"
                android:text="@string/this_is_a_button"
                android:background="#66545e"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageView
                android:layout_margin="4dp"
                android:background="@drawable/birdimage"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/bird_image"/>
            <Button
                android:layout_margin="4dp"
                android:text="@string/this_is_a_lighter_button"
                android:background="#a39193"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:minHeight="50dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            >
            <EditText
                android:background="#2db4aa"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/this_is_an_edit_text"
                android:autofillHints="@string/this_is_an_edit_text"
                android:inputType="text"
                />

        </TableRow>
        <TableRow
            android:minHeight="50dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <EditText
                android:layout_height="match_parent"
                android:background="#2db4aa"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/this_is_another_edit_text"
                android:autofillHints="This is another edit text"
                android:inputType="text" />

        </TableRow>
        <TableRow
            android:background="@color/colorAccent"
            android:minHeight="2dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TableRow>
        <TableRow
            android:minHeight="50dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <CheckBox
                android:background="#8867ff"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/notify_me"
                />
            <Switch
                android:background="#8867ff"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/auto_backup"/>

        </TableRow>
        <TableRow
            android:background="@color/colorAccent"
            android:minHeight="2dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TableRow>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:max="5"
                android:scaleY="0.5"
                android:scaleX="0.5"
                android:numStars="5"
                android:rating="4"
                android:stepSize="0.5" />
        </LinearLayout>

        <TableRow
            android:background="@color/colorAccent"
            android:minHeight="2dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TableRow>
            <RadioGroup
                android:layout_height="80dp"
                android:layout_width="match_parent"
                android:background="#ff6969"
                >
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/yes"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/no"/>
            </RadioGroup>
        <TableRow
            android:background="#ff6969"
            android:minHeight="100dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TableRow>
    </TableLayout>
</LinearLayout>